hphp/hack/test/pocket_universes/typing/dep1.bad.php.exp
File "dep1.bad.php", line 9, characters 20-28:
Illegal Pocket Universe invocation PU5:@Y:@S (Naming[2110])
